Amend select's vertical align and prevent showing broken third line

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -273,7 +273,7 @@
 		display: block;
 		outline: 0 !important;
 		overflow: hidden;
-		padding: 3px 38px 0 @margin / 2;
+		padding: 5px 38px 0 @margin / 2;
 		position: absolute;
 		z-index: 1000;
 
